
- Release builds on iPhone now compile out the elaborate descriptions
  for each GDataObject.  Developers can set GDATA_SIMPLE_DESCRIPTIONS
  in their projects to control this behavior.

- Release builds on iPhone now compile out the http logging code.
  Developers can set STRIP_GDATA_FETCH_LOGGING in their projects to control
  this behavior.

- Various internal refactoring for improved code readability and
  maintainability.

- For performance, unknown elements and attributes are now removed from
  GDataObjects by comparing only object pointers, not the underlying XML.

- To improve parsing performance, GDataObject extension declarations are cached
  rather than duplicated in each object.

- To reduce memory usage, GDataObject extensions are stored in arrays only
  when there is more than one instance of an extension class.

- To reduce memory usage, GDataXMLNode now caches all generated NSStrings,
  and returns nil instead of empty arrays on getters. This may deviate from
  NSXML semantics of returning empty arrays.

- GDataOrganization setters now filter out empty string org names and titles.

- Contacts sample updated to optionally fetch only the MyContacts group.

Bugs Fixed

- Fixed leak in -keepChildXMLElementsForElement (thanks alexkac)

- GDataXMLNode now consistently returns cached copies of child elements
  and attributes rather than duplicate copies.
  
- Fixed possibiilty of If-modified-since header being added to http deletes


Release 1.6.0
30-January-2009
Changes since 1.5.0

Additions

- Added -setShouldServiceFeedsIgnoreUnknowns to service classes, allowing
  for faster feed parsing on iPhone by ignoring unexpected XML, but requiring
  that entries from such feeds must be individually fetched by the client 
  before being updated.
  
- Added GDataServerError, representing error responses from services supporting
  structured errors.  On feed and entry fetch errors, a GDataServerErrorGroup